; ModuleID = '/home/carl/AnghaBench/darwin-xnu/libsyscall/mach/extr_mig_reply_port.c_mig_dealloc_reply_port.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/libsyscall/mach/extr_mig_reply_port.c_mig_dealloc_reply_port.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MACH_PORT_NULL = common dso_local global i64 0, align 8
@_task_reply_port = common dso_local global i64 0, align 8
@MACH_PORT_RIGHT_RECEIVE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mig_dealloc_reply_port(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %4 = call i64 (...) @_mig_get_reply_port()
  store i64 %4, i64* %3, align 8
  %5 = load i64, i64* %3, align 8
  %6 = load i64, i64* @MACH_PORT_NULL, align 8
  %7 = icmp ne i64 %5, %6
  br i1 %7, label %8, label %29

8:                                                ; preds = %1
  %9 = load i64, i64* %3, align 8
  %10 = load i64, i64* @_task_reply_port, align 8
  %11 = icmp ne i64 %9, %10
  br i1 %11, label %12, label %29

12:                                               ; preds = %8
  %13 = load i64, i64* @_task_reply_port, align 8
  %14 = call i32 @_mig_set_reply_port(i64 %13)
  %15 = call i32 (...) @mach_task_self()
  %16 = load i64, i64* %3, align 8
  %17 = load i32, i32* @MACH_PORT_RIGHT_RECEIVE, align 4
  %18 = call i32 @mach_port_mod_refs(i32 %15, i64 %16, i32 %17, i32 -1)
  %19 = load i64, i64* %2, align 8
  %20 = load i64, i64* %3, align 8
  %21 = icmp ne i64 %19, %20
  br i1 %21, label %22, label %26

22:                                               ; preds = %12
  %23 = call i32 (...) @mach_task_self()
  %24 = load i64, i64* %2, align 8
  %25 = call i32 @mach_port_deallocate(i32 %23, i64 %24)
  br label %26

26:                                               ; preds = %22, %12
  %27 = load i64, i64* @MACH_PORT_NULL, align 8
  %28 = call i32 @_mig_set_reply_port(i64 %27)
  br label %29

29:                                               ; preds = %26, %8, %1
  ret void
}

declare dso_local i64 @_mig_get_reply_port(...) #1

declare dso_local i32 @_mig_set_reply_port(i64) #1

declare dso_local i32 @mach_port_mod_refs(i32, i64, i32, i32) #1

declare dso_local i32 @mach_task_self(...) #1

declare dso_local i32 @mach_port_deallocate(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
